objects/rrde__enableRrobin__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This custom setting is used to enable or disabling round robin rule for Lead or Case.</description>
    <fields>
        <fullName>rrde__Current_Monthly_Cycle_End_date__c</fullName>
        <description>End date of current monthly cycle</description>
        <inlineHelpText>End date of current monthly cycle</inlineHelpText>
        <label>Current Monthly Cycle End date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rrde__Current_Monthly_Cycle_Start_date__c</fullName>
        <description>Start date of current monthly cycle</description>
        <inlineHelpText>Start date of current monthly cycle</inlineHelpText>
        <label>Current Monthly Cycle Start date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rrde__Current_Weekly_Cycle_End_date__c</fullName>
        <description>End date of the weekly cycle.</description>
        <inlineHelpText>End date of the weekly cycle.</inlineHelpText>
        <label>Current Weekly Cycle End date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rrde__Current_Weekly_Cycle_Start_date__c</fullName>
        <description>Start date of current cycle</description>
        <inlineHelpText>Start date of current cycle</inlineHelpText>
        <label>Current Weekly Cycle Start date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rrde__Daily_Distribution_Date__c</fullName>
        <description>Daily Distribution Date</description>
        <inlineHelpText>Daily Distribution Date</inlineHelpText>
        <label>Daily Distribution Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rrde__Daily_Distribution_End_Date__c</fullName>
        <description>Daily Distribution End Date</description>
        <inlineHelpText>Daily Distribution End Date</inlineHelpText>
        <label>Daily Distribution End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rrde__Daily_Distribution__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if Assignment is Daily</description>
        <inlineHelpText>Check if Assignment is Daily</inlineHelpText>
        <label>Daily Assignment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rrde__Default_Owner_ID__c</fullName>
        <label>Default Owner ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rrde__Distribute_Daily__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checking this means Distribution from queue is set to daily</description>
        <label>Distribute Daily</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rrde__Distribute_Hourly__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checking this means Distribution from queue is set to hourly.</description>
        <label>Distribute Hourly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rrde__Dont_show_welcome_page__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Dont show welcome page</description>
        <inlineHelpText>Dont show welcome page</inlineHelpText>
        <label>Dont show welcome page</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rrde__Enable_Round_Robin_Account_All_Users__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Round Robin for All Users</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rrde__Enable_Round_Robin_Account_online_Users__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Round Robin for online Users</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rrde__Enable_Round_Robin_Opportunity_All_Users__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Round Robin for All Users</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rrde__Enable_Round_Robin_Oppty_online_Users__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Round Robin for online Users</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rrde__Enable_Round_Robin_for_Case_Online_Users__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if you want to run Round Robin for Case Assignment only for online users.</description>
        <inlineHelpText>Check this box if you want to run Round Robin for Case Assignment only for online users.</inlineHelpText>
        <label>Enable Round Robin for Online Users</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rrde__Enable_Round_Robin_for_Lead_Online_Users__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if you want to run Round Robin lead Assignment only for online Round Robin users.</description>
        <inlineHelpText>Check this box if you want to run Round Robin lead Assignment only for online Round Robin users.</inlineHelpText>
        <label>Enable Round Robin for online Users</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rrde__Enable_assignment_to_previous_owner_c__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Leads with the same value in the field selected below as an existing lead is assigned to the owner of the existing lead.</description>
        <inlineHelpText>Leads with the same value in the field selected below as an existing lead is assigned to the owner of the existing lead. Choose the field you want for the relationship to be based from the list below.</inlineHelpText>
        <label>Enable relationship based assignment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rrde__Enable_for_All_Case_Round_Robin_Users__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if you want to run Round Robin Case Assignment for all Round Robin users.</description>
        <inlineHelpText>Check this box if you want to run Round Robin Case Assignment for all Round Robin users.</inlineHelpText>
        <label>Enable Round Robin for all Users</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rrde__Enable_for_All_Lead_Round_Robin_Users__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if you want to run Round Robin lead Assignment for all Round Robin users.</description>
        <inlineHelpText>Check this box if you want to run Round Robin lead Assignment for all Round Robin users.</inlineHelpText>
        <label>Enable Round Robin for All Users</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rrde__Enable_relationship_based_assignment_c__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Cases with the same value in the field selected below as an existing case is assigned to the owner of the existing lead.</description>
        <inlineHelpText>Cases with the same value in the field selected below as an existing case is assigned to the owner of the existing lead. Choose the field you want for the relationship to be based from the list below.</inlineHelpText>
        <label>Enable relationship based assignment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rrde__Enable_relationship_based_assignment_opp__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable relationship based assignment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rrde__Hourly_Assignment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if Assignment is Hourly</description>
        <inlineHelpText>Check if Assignment is Hourly</inlineHelpText>
        <label>Hourly Assignment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rrde__Hourly_Distribution_End_Time__c</fullName>
        <label>Hourly Distribution End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rrde__Hourly_Distribution_Start_Time__c</fullName>
        <label>Hourly Distribution Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rrde__Monthly_Distribution__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if the distribution is Monthly</description>
        <inlineHelpText>Check if the Assignment is Monthly</inlineHelpText>
        <label>Monthly Assignment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rrde__Notify_Account_Owner_via_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notify Account Owner via Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rrde__Notify_Account_Owner_via_Task__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notify Account Owner via Task</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rrde__Notify_Opportunity_Owner_via_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notify Opportunity Owner via Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rrde__Notify_Opportunity_Owner_via_Task__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notify Opportunity Owner via Task</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rrde__Notify_by_Email_to_Case_Owner__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if you want to notify the Case owner Via Email</description>
        <inlineHelpText>Check this box if you want to notify the Case owner Via Email</inlineHelpText>
        <label>Notify Case Owner via Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rrde__Notify_by_Email_to_Lead_Owner__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if you want to notify the Lead owner Via Email</description>
        <inlineHelpText>Check this box if you want to notify the Lead owner Via Email</inlineHelpText>
        <label>Notify Lead Owner via Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rrde__Notify_by_Task_to_Case_Owner__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if you want to notify the Case owner Via Task</description>
        <inlineHelpText>Check this box if you want to notify the Case owner Via Task</inlineHelpText>
        <label>Notify Case Owner via Task</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rrde__Notify_by_Task_to_Lead_Owner__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if you want to notify the Lead owner Via Task</description>
        <inlineHelpText>Check this box if you want to notify the Lead owner Via Task</inlineHelpText>
        <label>Notify Lead Owner via Task</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rrde__Relationship_for_Case__c</fullName>
        <label>Relationship for Case</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rrde__Relationship_for_Lead__c</fullName>
        <label>Relationship for Lead</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rrde__Relationship_for_Opportunity__c</fullName>
        <label>Relationship for Opportunity</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rrde__Skip_Weekends__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Skip Weekends</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rrde__Weekly_Distribution__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if the Assignmentis weekly</description>
        <inlineHelpText>Check if the  Assignment is weekly</inlineHelpText>
        <label>Weekly Assignment</label>
        <type>Checkbox</type>
    </fields>
    <label>Enable/Disable Round Robin</label>
</CustomObject>